Add immigration/payroll modules and fix Employee/Bills endpoints
Checks in accumulated backend work: LCA, Passport, Visa, Immigration,
and PayrollSummary/PayrollDetail modules (controllers, services,
repositories, models) plus their test coverage, alongside this
session's fixes:

- EmployeeController: PUT/DELETE /employees/{id} were double-mapped
  under the class-level /api/v1/employees prefix, producing
  /api/v1/employees/employees/{id} instead of /api/v1/employees/{id}.
  Also expanded updateEmployee to persist all editable fields instead
  of only firstName/lastName/emailId, which silently dropped grid edits.
- BillsController/BillsService: added POST/GET/PUT/DELETE for Bills,
  mirroring the existing Invoice CRUD conventions.
- pom.xml: removed the mismatched spring-boot-starter-web 3.1.0 override
  (app uses javax.* entities, incompatible with jakarta-based 3.x) and
  aligned java.version with the compiler plugin's target 17.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>